Fix user-list overflow

--- a/css/chat.less
+++ b/css/chat.less
@@ -32,6 +32,7 @@
   flex-direction: column;
   padding-left: 0.5em;
   padding-right: 0.5em;
+  overflow-x: hidden;
   overflow-y: scroll;
   width: 220px;
 
@@ -44,7 +45,8 @@
   }
 
   .nick {
-      overflow: hidden;
-      text-overflow: ellipsis;
+    height: 1.3em;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
