--- a/css/main.less
+++ b/css/main.less
@@ -26,5 +26,6 @@ body {
 }
 
 .nick {
-    font-weight: bold;
+  font-weight: bold;
+  white-space: nowrap;
 }
